--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,7 @@
 #spring.datasource.url= jdbc:db2://1bbf73c5-d84a-4bb0-85b9-ab1a4348f4a4.c3n41cmd0nqnrk39u98g.databases.appdomain.cloud:32286/bludb
 
 # (This connection string should work; if not try the one above)
-spring.datasource.name= db2
+# spring.datasource.name= db2
 spring.datasource.url= jdbc:db2://1bbf73c5-d84a-4bb0-85b9-ab1a4348f4a4.c3n41cmd0nqnrk39u98g.databases.appdomain.cloud:32286/bludb:user=bpy97202;password=DGHUMHicqIHvt5BK;sslConnection=true;
 spring.datasource.hikari.maximum-pool-size = 3
  #spring.datasource.username= bpy97202
