--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,15 +8,12 @@
 ## Hibernate ddl auto (create, create-drop, validate, update)
 #spring.jpa.hibernate.ddl-auto= update
 
-#spring.datasource.url= jdbc:db2://1bbf73c5-d84a-4bb0-85b9-ab1a4348f4a4.c3n41cmd0nqnrk39u98g.databases.appdomain.cloud:32286/bludb:user=bpy97202;password=DGHUMHicqIHvt5BK;sslConnection=true;
-#spring.datasource.url= jdbc:db2://1bbf73c5-d84a-4bb0-85b9-ab1a4348f4a4.c3n41cmd0nqnrk39u98g.databases.appdomain.cloud:32286/bludb
-
-# (This connection string should work; if not try the one above)
 spring.datasource.name= db2
 spring.datasource.url= jdbc:db2://1bbf73c5-d84a-4bb0-85b9-ab1a4348f4a4.c3n41cmd0nqnrk39u98g.databases.appdomain.cloud:32286/bludb:user=bpy97202;password=DGHUMHicqIHvt5BK;sslConnection=true;
 spring.datasource.hikari.maximum-pool-size = 3
- #spring.datasource.username= bpy97202
- #spring.datasource.password= DGHUMHicqIHvt5BK
+spring.datasource.username= bpy97202
+spring.datasource.password= DGHUMHicqIHvt5BK
+
 #spring.jpa.hibernate.ddl-auto= update
 #spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
 #spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.db2dialect
