--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@
 #spring.jpa.hibernate.ddl-auto= update
 
 spring.datasource.name= db2
-spring.datasource.url= jdbc:db2://1bbf73c5-d84a-4bb0-85b9-ab1a4348f4a4.c3n41cmd0nqnrk39u98g.databases.appdomain.cloud:32286/bludb:user=bpy97202;password=DGHUMHicqIHvt5BK;sslConnection=true;
+spring.datasource.url= 1bbf73c5-d84a-4bb0-85b9-ab1a4348f4a4.c3n41cmd0nqnrk39u98g.databases.appdomain.cloud
 spring.datasource.hikari.maximum-pool-size = 3
 
 
